--- a/src/layouts/Header.module.css
+++ b/src/layouts/Header.module.css
@@ -1,3 +1,8 @@
+.header {
+  box-shadow: var(--shadow);
+  background-color: var(--colors-ui-base);
+}
+
 .wrapper {
   display: flex;
   justify-content: space-between;
