--- a/src/components/countries/Countries.module.css
+++ b/src/components/countries/Countries.module.css
@@ -7,7 +7,7 @@
 
 .countriesItem {
   border-radius: var(--radii);
-  background-color: car(--colors-ui-base);
+  background-color: var(--colors-ui-base);
   box-shadow: var(--shadow);
   overflow: hidden;
   cursor: pointer;
