--- a/src/layouts/Main.Module.css
+++ b/src/layouts/Main.Module.css
@@ -16,6 +16,6 @@
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  color: var(--color-text);
+  color: var(--colors-text);
   cursor: pointer;
 }
